--- a/style.css
+++ b/style.css
@@ -13,9 +13,28 @@ body {
     font-size: 60px;
 }
 
+nav {
+    background-color: #111;
+    padding: 1px;
+    align-items: center;
+    width: 100%;
+    position: sticky;
+    top: 0px;
+    z-index: 999;
+}
+
 .homebg {
     margin: 0;
     background-image: url("home bg.jpg");
+    /* filter: brightness(25%); */
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.fobg {
+    margin: 0;
+    background-image: url("foodbg.jpeg");
     /* filter: brightness(25%); */
     background-size: cover;
     width: 100%;
