--- a/style.css
+++ b/style.css
@@ -32,12 +32,6 @@ nav {
     height: 100vh;
 }
 
-.fobg {
-    margin: 0;
-    background-image: url("foodbg.jpeg");
-    /* filter: brightness(25%); */
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
+.card1 {
+    height: 200px;
 }
-
